web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-rhs/strict-mode-parent-not-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (3,17)
3|    async (valu=await) => {
 |               ^
